@@ -1,3 +1,6 @@
+- make the focus default on "yes" in yes/no dialogs
+  (Emmanuel Blindauer, #39123)
+
 Version 4.9.6 - 20 March 2008, Thierry Vignaud
 
 - rpmdrake:
